cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
project(RoboChase CXX)
if(WIN32)
set(SDL2_DIR "C:/SDL2-2.0.9/x86_64-w64-mingw32")
set(SDL2_IMAGE_DIR "C:/SDL2_image-2.0.4/x86_64-w64-mingw32")
endif(WIN32)
find_package(SDL2 REQUIRED)
find_package(SDL2_IMAGE REQUIRED)
file(GLOB SOURCES ${PROJECT_NAME}/*cpp)
file(GLOB HEADERS ${PROJECT_NAME}/*.h*)
file(GLOB RESOURCES ${PROJECT_NAME}/*png)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIRS})
if(APPLE)
    set_source_files_properties(${RESOURCES} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
    add_executable(RoboChase MACOSX_BUNDLE ${SOURCES} ${HEADERS} ${RESOURCES})
elseif(WIN32)
	# set(WIN_RESOURCE_FILE ${CMAKE_CURRENT_SOURCE_DIR}/resources/roboneko.rc)
    # add_executable(RoboChase WIN32 ${SOURCES} ${HEADERS} ${WIN_RESOURCE_FILE})
	add_executable(RoboChase WIN32 ${SOURCES} ${HEADERS})
else()
    add_executable(RoboChase ${SOURCES} ${HEADERS} ${RESOURCES}) 
endif()
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES})
file(COPY ${RESOURCES} DESTINATION ${CMAKE_BINARY_DIR})
